--- a/14-gif-route/package.json
+++ b/14-gif-route/package.json
@@ -1,23 +1,31 @@
 {
-  "name": "14-gif-route",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build"
-  },
-  "dependencies": {
-    "axios": "^0.26.1",
-    "core-js": "^3.8.3",
-    "register-service-worker": "^1.7.2",
-    "vue": "^3.2.13",
-    "vue-axios": "^3.4.1",
-    "vue-router": "^4.0.3"
-  },
-  "devDependencies": {
-    "@vue/cli-plugin-babel": "~5.0.0",
-    "@vue/cli-plugin-pwa": "~5.0.0",
-    "@vue/cli-plugin-router": "~5.0.0",
-    "@vue/cli-service": "~5.0.0"
-  }
+    "name": "14-gif-route",
+    "version": "0.1.0",
+    "private": true,
+    "scripts": {
+        "serve": "vue-cli-service serve",
+        "build": "vue-cli-service build"
+    },
+    "vue": {
+        "pwa": {
+            "name": "Gif Router",
+            "themeColor": "#444444",
+            "appleMobileWebAppCapable": "yes",
+            "appleMobileWebappStatusBarStyle": "black-translucent"
+        }
+    },
+    "dependencies": {
+        "axios": "^0.26.1",
+        "core-js": "^3.8.3",
+        "register-service-worker": "^1.7.2",
+        "vue": "^3.2.13",
+        "vue-axios": "^3.4.1",
+        "vue-router": "^4.0.3"
+    },
+    "devDependencies": {
+        "@vue/cli-plugin-babel": "~5.0.0",
+        "@vue/cli-plugin-pwa": "~5.0.0",
+        "@vue/cli-plugin-router": "~5.0.0",
+        "@vue/cli-service": "~5.0.0"
+    }
 }
